--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,7 +1,9 @@
 body {
-  @apply font-sans
+  @apply font-sans;
+}
 
-    &.scroll-off {
+body {
+  &.scroll-off {
     overflow: hidden;
     width: 100vw;
   }
