fix forcing flex for tagify element

--- a/src/assets/style/tagify.scss
+++ b/src/assets/style/tagify.scss
@@ -17,6 +17,10 @@ $tagify-dd-color-primary:#b51208;
   --tagify-dd-color-primary: #b51208;
 }
 
+.tagify {
+  display: flex !important;
+}
+
 .auction-tagify .tagify {
   @apply flex-grow;
 }
